- Do stuff with bamboo shoots? idk
- Irontack can be thrown as a rock/used as sling ammo
- Meal text updated to be more like vanilla

HANDBOOK THINGS:
- Muffins and fruit bread have default visuals in the handbook
- Sap collecting info moved from handbook guide to spile and sap entries - DONE!!!
- Handbook entries added for almost every item 
- Vanilla dough grouped in handbook - DONE!!!
- Text added to vanilla entries for cider/spirits to explain EF aging

REBALANCING:
- Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
- Total review of how "transitionableProps" is used; general nerfing
- All charred food has the worst nutrition value to compensate for having the longest perish timer
- Dried fruit rehydrates in meals via cookedStack property
- Cheese in meal patched removed; now handled in vanilla - DONE!!!
- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven - DONE!!!
- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
- Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
- Carrot can be added to fruit bread/muffins, similar to pumpkin
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!
- All sauces are not drinkable; for food use only
- Soaked soybeans require 3 days in barrel, down from 14 - DONE!!!
- Cultured soybeans require 7 days in barrel, down from 14 - DONE!!!
- Compote buffed; requires more ingredients
- Salad dressing can be made just with vinegar + oil - DONE!!!
- Peanut sauce can be used in salad and pasta meals - DONE!!!
- Peanut sauce can be made with fish sauce - DONE!!!
- Small bones can be used like bones to make broth/gelatin - DONE!!!
- Lard harden timer reduced from 180 hours to 18 hours - DONE!!!
- Legumes juice into more oil - DONE!!!
- Syrup can no longer be drunk straight - DONE!!!