@@ -1538,6 +1538,9 @@
   "item-berrybread-syruppartbaked" : "Syrup-covered fruit bread (part-baked)",
   "item-berrybread-syrup" : "Syrup-covered fruit bread",
   "item-berrybread-syrupcharred" : "Syrup-covered fruit bread (charred)",
+  "item-handbooktitle-berrybread": "Fruit Bread",
+  "item-handbooktext-berrybread":"A delectable treat, created by <a href=\"handbook://kneadingmixingguide\">kneading</a> 1-2 fruit and/or gelatin into a ball of dough.",
+
 
   "itemdesc-berrybread-dough": "Sweet fruit dough. Handle with care.",
   "itemdesc-berrybread-partbaked": "It's a bit chewy, but still sweet!",
@@ -9275,7 +9278,6 @@
   "game:recipeingredient-item-candiedfruit-breadfruit": "candied breadfruit",
   "game:recipeingredient-item-candiedfruit-lychee": "candied lychee",
   "game:recipeingredient-item-candiedfruit-pomegranate": "candied pomegranate",
-
   
   "game:recipeingredient-item-ciderportion-insturmentalcase": "cider",
   "game:recipeingredient-item-spiritportion-insturmentalcase": "spirit",
@@ -9292,6 +9294,8 @@
   "block-bowl-peat-red": "Red ceramic bowl of peat",
   "block-bowl-peat-tan": "Tan ceramic bowl of peat",
   "blockdesc-bowl-peat-*": "Mix with oil or lard to make a lamp!",
+  "item-handbooktitle-bowl-peat": "Bowl of Peat",
+  "item-handbooktext-bowl-peat":"Now that it's in a bowl, this peat just needs a little bit of fat/oil and a spark to become a perfect lamp.",
 
   "item-saltcrystal-damp": "Salt crystal (damp)",
   "item-saltcrystal-dry": "Salt crystal (dry)",
@@ -9779,6 +9783,9 @@
   "game:item-handbooktext-resin": "Resin is found leaking from the <a href=\"handbook://block-log-resin-pine-ud\">trunks</a> of pine and acacia trees. Pines can be found in all but the most inhospitable and extreme climates, while acacias are found in dry tropical climates only. Resin is also an ingredient for <a href=\"handbook://item-glueportion-pitch-hot\">pitch glue</a>.<br><br><a href=\"handbook://item-expandedfoods:softresin\">Liquid resin</a> can be collected from acacia/pine trees using a <a href=\"handbook://block-aculinaryartillery:spile-steel-north\">spile</a>.<br>Pine trees produce resin from March to November.<br>Acacia trees produce resin from April to September.",
 
   "item-handbooktitle-juiceprocessingguide": "Juice Processing Guide (Expanded Foods)",
-  "item-handbooktext-juiceprocessingguide": "Fruit juice is a base liquid with many resulting outputs.<br>If allowed to spoil, it ferments into <a href=\"handbook://item-vinegarportion\">vinegar</a> and acidifies.<br>When sealed into a barrel or <a href=\"handbook://block-aculinaryartillery:bottle-clay-blue-corked\">bottle</a>, juice cures over time into 'cider' (the exact name varies based on the fruit used).<br>Lastly, juice may be <a href=\"handbook://simmeringguide\">simmered</a> in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a> to concentrate it into fruit syrup."
-  
+  "item-handbooktext-juiceprocessingguide": "Fruit juice is a base liquid with many resulting outputs.<br>If allowed to spoil, it ferments into <a href=\"handbook://item-vinegarportion\">vinegar</a> and acidifies.<br>When sealed into a barrel or <a href=\"handbook://block-aculinaryartillery:bottle-clay-blue-corked\">bottle</a>, juice cures over time into 'cider' (the exact name varies based on the fruit used).<br>Lastly, juice may be <a href=\"handbook://simmeringguide\">simmered</a> in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a> to concentrate it into fruit syrup.",
+
+  "item-handbooktitle-dough": "Dough Enhancements (Expanded Foods)",
+  "item-handbooktext-dough": "Flour can be mixed with water from a liquid container like usual, but <a href=\"handbook://kneadingmixingguide\">kneading</a> allows more ingredients to be combined together. In addition to water, milk, lard, and broth may be used to create dough. Optionally, lard/cooking oil and yeast starter can be added in. Adding any liquids beyond water will add small amounts of healing to the finished bread product (including pies)."
+
 }   
