@@ -92,7 +92,8 @@ HANDBOOK THINGS:
 - Sap collecting info moved from handbook guide to spile and sap entries - DONE!!!
 - Handbook entries added for almost every item 
 - Vanilla dough grouped in handbook - DONE!!!
-- Text added to vanilla entries for cider/spirits to explain EF aging
+- Text added to vanilla entries for cider/spirits to explain EF aging - DONE!!!
+- Text added to vanilla dough to explain EF expansions - DONE!!!
 
 REBALANCING:
 - Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
